# releasesfeed

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
deploy/: workflow.yaml
src/: config.rs  feed.rs  main.rs
src/github/: graphql.rs  mod.rs
